Attempt to fix price circle spacing

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,3 +1,9 @@
+.listing {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .myplaces {
     display: flex;
     flex-wrap: wrap;
